<resources>
    <string name="app_name">AAHAR</string>
    <string name="YOUR_API_KEY">AIzaSyDA2UAGCpTf2FwHobEzplc6_FA-3c_PGQA</string>
    <string name="Signup_to_start">SignUp to start your new Journey</string>
    <string name="welcome">Welcome to AAHAR</string>
    <string name="New_User_Sign_Up">New user? SIGN UP</string>
    <string name="landingText">Login to continue</string>
    <string name="landingPageWelcome">Hello there, Welcome Back</string>
    <string name="slogan">Give food, spread good</string>
    <string name="My_Dashboard">My Dashboard</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_setting">Setting</string>
    <string name="Loading..">Loading..</string>
    <string name="prompt_User_profile">My Credentials</string>
    <string name="prompt_Configuration">My Configuration</string>
    <string name="prompt_profile">My Credentials</string>
    <string name="prompt_delete_profile">Delete Profile</string>
    <string name="prompt_change_password">Reset Password</string>
    <string name="prompt_change_Email">Update Email</string>
    <string name="prompt_change_profile">Update Profile</string>
    <string name="prompt_Confirm_password">Confirm Password</string>
    <string name="prompt_Forget_password">FORGET PASSWORD</string>
    <string name="prompt_current_password">Current Password</string>
    <string name="prompt_update_password">Update Password</string>
    <string name="prompt_new_password">New Password</string>
    <string name="about">About Us</string>
    <string name="Contact_Us">Contact Us</string>
    <string name="Log_Out">Log Out</string>
    <string name="history">History</string>
    <string name="aboutus">AAHAR provides the right channels for compassionate citizens to begin and manage initiatives, that solve for hunger locally. Our mission is to make India hunger free</string>
    <string name="login">Login</string>
    <string name="donate">Donate</string>
    <string name="message">Message</string>
    <string name="create_new">Not Registered! Click here to Register</string>
    <string name="not_register">Already Registered?</string>
    <string name="Already_Have_Account">Already Have an account? LOGIN</string>
    <string name="name">User Name</string>
    <string name="Full_Name">Full Name</string>
    <string name="Instagram">Instagram</string>
    <string name="Facebook">Facebook</string>
    <string name="Twitter">Twitter</string>
    <string name="Version">Version 1.0.0</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="name_error">Please enter your name</string>
    <string name="phone_error">Please enter your phone number</string>
    <string name="email_error">Please enter your email address</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="password_error">Please enter a password</string>
    <string name="error_invalid_password">Please enter a minimum password of 6 characters</string>
    <string name="donor_name">Donor Name</string>
    <string name="food_name">Food Items</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="foodmap">Food Map</string>
    <string name="mypin">Remove My Pin</string>
    <string name="Receive">Receive</string>
    <string name="receiver_name">Receiver Name</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="delete">Delete</string>
    <string name="title_activity_main10">MainActivity_10</string>
    <string name="string1">Password Assistance</string>
    <string name="string2">Regaining Access to Your Account</string>
    <string name="string3">REST PASSWORD</string>
    <string name="string4">Select Image</string>
    <string name="string5">Simply erase the password associated with your account and we will send you an email with step-by-step instructions to assist you in resetting your password and regaining access to your account. Our aim is to make the process as simple as possible for you.</string>
    <string name="string6">Update Image</string>
    <string name="string7">Update Profile Picture</string>
    <string name="string8">Update your profile picture and let other users see the best version of you! Rest assured that your photo and information will never be used for anything other than helping you connect with others. We value your privacy and always protect it.</string>
    <string name="string9">Update the Changes</string>
    <string name="string10">Your privacy is of utmost importance to us. We want you to know that your photo and personal information will always be kept confidential and will never be used for anything other than helping you connect with others on our platform. We value your privacy and always protect it.</string>
    <string name="string11">You can update your email address after you authenticate your profile by entering your current email and password.</string>
    <string name="AUTHENTICATE">AUTHENTICATE</string>
    <string name="prompt_current_email">Current Email</string>
    <string name="prompt_new_email">New Email</string>
    <string name="prompt_update_email_ALLCAP">UPDATE EMAIL</string>
    <string name="string12">Your profile is not Authenticated yet! </string>
    <string name="string13">You can reset your password after you authenticate your profile by entering your current password.</string>
    <string name="string14">You can delete your profile and all related data after you authenticate your profile by entering your current password.</string>
    <string name="string15">DELETE PROFILE.</string>
    <string name="title_activity_my_pin">myPin</string>
    <string name="title_activity_donate">Donate</string>
    <string name="title_activity_food_map">FoodMap</string>
    <string name="title_activity_receive">Receive</string>
</resources>