<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".landing_page">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dim_20">
            <ImageView
                android:layout_width="@dimen/dim_150"
                android:layout_height="@dimen/dim_150"
                app:srcCompat="@drawable/inapp_logo" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/landingPageWelcome"
                android:textSize="@dimen/sp_50"
                android:textColor="@color/Text1"
                android:fontFamily="@font/bangers" />
            <TextView
                android:id="@+id/id6_SignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dim_10"
                android:layout_marginBottom="@dimen/dim_10"
                android:text="@string/landingText"
                android:textSize="@dimen/sp_19"
                android:textColor="@color/Text1"
                android:fontFamily="@font/opensans"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/id7_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                app:boxStrokeColor="@color/light_blue"
                app:hintTextAppearance="@style/HintTextAppearance"
                app:hintTextColor="@color/hint_color"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/id7_textUserEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/sp_16"
                    android:textColor="@color/Text1"
                    android:fontFamily="@font/opensans"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/id7_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                app:boxStrokeColor="@color/light_blue"
                app:hintTextAppearance="@style/HintTextAppearance"
                app:hintTextColor="@color/hint_color"
                app:passwordToggleEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/id7_textUserPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_16"
                    android:textColor="@color/Text1"
                    android:fontFamily="@font/opensans"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/id8_Forget_password"
                android:layout_width="@dimen/dim_200"
                android:layout_height="wrap_content"
                android:text="@string/prompt_Forget_password"
                android:layout_gravity="end"
                android:elevation="0dp"
                android:layout_marginTop="@dimen/dim_10"
                android:textSize="@dimen/sp_19"
                android:textColor="@color/Text1"
                android:background="@drawable/button_bg4"
                android:fontFamily="@font/opensans"/>

            <Button
                android:id="@+id/id9_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_gravity="center_horizontal"
                android:elevation="0dp"
                android:layout_marginTop="@dimen/dim_10"
                android:textSize="@dimen/sp_19"
                android:textColor="@color/Text1"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:strokeColor="#fff"
                android:fontFamily="@font/opensans"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/id10_sign_in"
                android:layout_width="@dimen/dim_200"
                android:layout_height="wrap_content"
                android:text="@string/New_User_Sign_Up"
                android:layout_gravity="end"
                android:elevation="0dp"
                android:layout_marginTop="@dimen/dim_10"
                android:textSize="@dimen/sp_19"
                android:textColor="@color/Text1"
                android:background="@drawable/button_bg4"
                android:fontFamily="@font/opensans"/>
        </LinearLayout>
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:elevation="@dimen/dim_10"
            android:visibility="gone"/>
    </RelativeLayout>
</ScrollView>