<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sign_up">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dim_20">
            <ImageView
                android:layout_width="@dimen/dim_150"
                android:layout_height="@dimen/dim_150"
                app:srcCompat="@drawable/inapp_logo" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="@dimen/sp_50"
                android:textColor="@color/Text1"
                android:fontFamily="@font/bangers" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dim_10"
                android:layout_marginBottom="@dimen/dim_10"
                android:text="@string/Signup_to_start"
                android:textSize="@dimen/sp_19"
                android:textColor="@color/Text1"
                android:fontFamily="@font/opensans"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/id11_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Full_Name"
                app:boxStrokeColor="@color/light_blue"
                app:hintTextAppearance="@style/HintTextAppearance"
                app:hintTextColor="@color/hint_color"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reg_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:textSize="@dimen/sp_16"
                    android:textColor="@color/Text1"
                    android:fontFamily="@font/opensans"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/id13_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                app:boxStrokeColor="@color/light_blue"
                app:hintTextAppearance="@style/HintTextAppearance"
                app:hintTextColor="@color/hint_color"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reg_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_16"
                    android:fontFamily="@font/opensans"
                    android:textColor="@color/Text1"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/id14_phone_Number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                app:boxStrokeColor="@color/light_blue"
                app:hintTextAppearance="@style/HintTextAppearance"
                app:hintTextColor="@color/hint_color"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reg_phoneNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_16"
                    android:fontFamily="@font/opensans"
                    android:textColor="@color/Text1"
                    android:inputType="phone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/id15_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                app:boxStrokeColor="@color/light_blue"
                app:hintTextAppearance="@style/HintTextAppearance"
                app:hintTextColor="@color/hint_color"
                app:passwordToggleEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reg_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_16"
                    android:fontFamily="@font/opensans"
                    android:textColor="@color/Text1"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/id15_password_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_Confirm_password"
                app:boxStrokeColor="@color/light_blue"
                app:hintTextAppearance="@style/HintTextAppearance"
                app:hintTextColor="@color/hint_color"
                app:passwordToggleEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reg_password_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_16"
                    android:fontFamily="@font/opensans"
                    android:textColor="@color/Text1"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/id16_reg_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:layout_gravity="center_horizontal"
                android:elevation="0dp"
                android:layout_marginTop="@dimen/dim_10"
                android:textSize="@dimen/sp_19"
                android:onClick="registerUser"
                android:textColor="@color/Text1"
                android:background="@drawable/button_bg4"
                android:fontFamily="@font/opensans"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/id17_reg_login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Already_Have_Account"
                android:layout_gravity="center_horizontal"
                android:elevation="0dp"
                android:layout_marginTop="@dimen/dim_10"
                android:textSize="@dimen/sp_19"
                android:textColor="@color/Text1"
                android:background="@drawable/button_bg4"
                android:fontFamily="@font/opensans"/>
        </LinearLayout>
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="@dimen/dim_10"
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
</ScrollView>