<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".changePasswordActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dim_20">
            <ImageView
                android:layout_width="@dimen/dim_150"
                android:layout_height="@dimen/dim_150"
                android:layout_marginBottom="@dimen/dim_13"
                app:srcCompat="@drawable/inapp_logo" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prompt_change_password"
                android:textSize="@dimen/sp_28"
                android:textColor="@color/Text1"
                android:fontFamily="@font/opensans" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/bg_layout_with_stroke"
                android:layout_marginBottom="@dimen/dim_25"
                android:layout_marginTop="@dimen/dim_10"
                android:padding="@dimen/dim_16">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/string13"
                    android:textColor="@color/Text1"
                    android:textSize="@dimen/sp_19"
                    android:fontFamily="@font/opensans" />
            </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/oldpasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_current_password"
                app:boxStrokeColor="@color/light_blue"
                app:hintTextAppearance="@style/HintTextAppearance"
                app:hintTextColor="@color/hint_color"
                app:passwordToggleEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reg_oldpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_16"
                    android:fontFamily="@font/opensans"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Authentication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/AUTHENTICATE"
                android:layout_gravity="center_horizontal"
                android:elevation="0dp"
                android:layout_marginTop="@dimen/dim_10"
                android:layout_marginBottom="@dimen/dim_45"
                android:textSize="@dimen/sp_19"
                android:onClick="registerUser"
                android:textColor="@color/Text1"
                android:background="@drawable/button_bg4"
                android:fontFamily="@font/opensans"/>
            <LinearLayout
                android:id="@+id/linearLayoutTextViewYouAreNotAuthorized"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/button_bg5"
                android:padding="@dimen/dim_10">
                <TextView
                    android:id="@+id/textViewYouAreNotAuthorized"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/string12"
                    android:textColor="@color/Text1"
                    android:textSize="@dimen/sp_16"
                    android:fontFamily="@font/opensans" />
            </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_new_password"
                app:boxStrokeColor="@color/light_blue"
                app:hintTextAppearance="@style/HintTextAppearance"
                app:hintTextColor="@color/hint_color"
                app:passwordToggleEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reg_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_16"
                    android:fontFamily="@font/opensans"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/id15_password_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_Confirm_password"
                app:boxStrokeColor="@color/light_blue"
                app:hintTextAppearance="@style/HintTextAppearance"
                app:hintTextColor="@color/hint_color"
                app:passwordToggleEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reg_password_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_16"
                    android:fontFamily="@font/opensans"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/updateEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prompt_update_password"
                android:layout_gravity="center_horizontal"
                android:elevation="0dp"
                android:layout_marginTop="@dimen/dim_10"
                android:textSize="@dimen/sp_19"
                android:textColor="@color/Text1"
                android:background="@drawable/button_bg6"
                android:fontFamily="@font/opensans"/>
        </LinearLayout>
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="@dimen/dim_10"
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
</ScrollView>