<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".updateProfileActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dim_20">
            <ImageView
                android:layout_width="@dimen/dim_150"
                android:layout_height="@dimen/dim_150"
                android:layout_marginBottom="@dimen/dim_13"
                app:srcCompat="@drawable/inapp_logo" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prompt_change_profile"
                android:textSize="@dimen/sp_28"
                android:textColor="@color/Text1"
                android:fontFamily="@font/opensans" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/bg_layout_with_stroke"
                android:layout_marginBottom="@dimen/dim_10"
                android:layout_marginTop="@dimen/dim_10"
                android:padding="@dimen/dim_16">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/string10"
                    android:textColor="@color/Text1"
                    android:textSize="@dimen/sp_19"
                    android:fontFamily="@font/opensans" />
            </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                app:boxStrokeColor="@color/light_blue"
                app:hintTextAppearance="@style/HintTextAppearance"
                app:hintTextColor="@color/hint_color"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:textSize="@dimen/sp_16"
                    android:fontFamily="@font/opensans"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/numberLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                app:boxStrokeColor="@color/light_blue"
                app:hintTextAppearance="@style/HintTextAppearance"
                app:hintTextColor="@color/hint_color"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textUserNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:textSize="@dimen/sp_16"
                    android:fontFamily="@font/opensans"/>
            </com.google.android.material.textfield.TextInputLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/updateChanges"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string9"
                android:layout_gravity="center_horizontal"
                android:elevation="0dp"
                android:layout_marginTop="@dimen/dim_10"
                android:textSize="@dimen/sp_19"
                android:textColor="@color/Text1"
                android:background="@drawable/button_bg4"
                android:fontFamily="@font/opensans"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/openUpdateProfileActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string7"
                android:layout_gravity="center_horizontal"
                android:elevation="0dp"
                android:layout_marginTop="@dimen/dim_10"
                android:textSize="@dimen/sp_19"
                android:onClick="registerUser"
                android:textColor="@color/Text1"
                android:background="@drawable/button_bg4"
                android:fontFamily="@font/opensans"/>
        </LinearLayout>
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="@dimen/dim_10"
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

</ScrollView>